--- a/web/index.html
+++ b/web/index.html
@@ -110,5 +110,8 @@
   
   <script src="flutter_bootstrap.js" async=""></script>
 
+  <form>
+    <button formaction="http://sealstudios.co.uk/#/privacy_policy">Go to Privacy Policy</button>
+  </form>
 
 </body></html>
