ADD privacy policy button

--- a/web/index.html
+++ b/web/index.html
@@ -111,7 +111,7 @@
   <script src="flutter_bootstrap.js" async=""></script>
 
   <form>
-    <button formaction="http://sealstudios.co.uk/#/privacy_policy">Go to Privacy Policy</button>
+    <button formaction="https://sealstudios.co.uk/#/privacy_policy">Go to Privacy Policy</button>
   </form>
 
 </body></html>
